--- a/_posts/2019-06-29-the-us-narrative-today.html
+++ b/_posts/2019-06-29-the-us-narrative-today.html
@@ -2508,108 +2508,107 @@ stories:
   domain: http://www.sidneyherald.com/
   link: https://www.sidneyherald.com/national/news/two-regents-repay-funds-tagged-as-improper-spending/article_c1ca2b1f-7a1c-59c8-aa8f-4ef926484724.html
 images:
-- name: blossombar-dark-soul-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-soul-file-00-00-50-62.jpg
-- name: oldtrain-oldtrain-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-alien-goggles.jpg
-- name: oldcabin-oldcabin-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-sand-paper.jpg
-- name: fence-mexico-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-plentiful.jpg
-- name: oldhouse-oldhouse-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-emily-carr.jpg
-- name: old-church-oldchurch-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-internet-numbers.jpg
-- name: flower-barbed-wire-flower-barbed-wire-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-marcel-duchamp.jpg
-- name: power-lines-power-lines-empty-space-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-pablo-blue.jpg
-- name: aws-s3-stories-lincoln-consitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-lincoln-consitution.jpg
-- name: white-house-lawn-white-house-lawn-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-colorful-dream.jpg
-- name: old-cabin-oldcabin-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-nazi-poster.jpg
-- name: old-granary-field-granaryfield-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-crabapple.jpg
-- name: curtain-curtain-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-gan-vogh.jpg
-- name: gears-4882162452-fa3126b38d-b-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-marcel-duchamp.jpg
-- name: christianity-christianity-under-construction-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-space-pizza.jpg
-- name: catacombs-catacombs-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-monet-one.jpg
-- name: rockingchair-rockingchair-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-gred-mash.jpg
-- name: oldtrain-oldtrain-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-green-zuma.jpg
-- name: supreme-court-supremecourt-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-wols.jpg
-- name: gypsy-wagon-gypsywagon-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-neo-instinct.jpg
-- name: old-school-house-old-schoolhouse-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-attack-planes.jpg
-- name: dragon-desert-desert-dragon-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-internet-numbers.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-pablo-blue.jpg
-- name: power-lines-power-lines-empty-space-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-kandinsky-bv.jpg
-- name: ellis-island-ellisisland-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-colorful-dream.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-monet-one.jpg
-- name: old-door-lock-old-door-lock-2-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-copper-circuit-2.jpg
-- name: white-house-lawn-white-house-lawn-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-wols.jpg
-- name: losangelescloudyday-los-angeles-downtown-freeway.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/losangelescloudyday-los-angeles-downtown-freeway.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-crabapple.jpg
-- name: statue-of-liberty-front-view-statueofliberty-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-deep-connections.jpg
-- name: trucksilo-trucksilo-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-atari-asteroids.jpg
-- name: white-house-whitehouse-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-purple-pond.jpg
-- name: mosaic-face-mosaic-face-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-deep-connections.jpg
-- name: beach-clouds-lifeguard-beachclouds-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-oily-mcoilface.jpg
-- name: trucksilo-trucksilo-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dry-skin.jpg
-- name: file-00-00-59-36 2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-59-36
-    2.jpg
-- name: downtown-los-angeles-downtown-la-alberto-giacometti.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-alberto-giacometti.JPG
-- name: hollywood-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building.jpg
-- name: old-door-lock-old-door-lock-2-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-colorful-blocks.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-dali-two.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dali-two.png
-- name: crow_kandinsky_bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_kandinsky_bv.jpg
-- name: christianity-christianity-under-construction-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-smooth-ride.jpg
-- name: wave-DSC_0004.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wave-DSC_0004.jpg
-- name: razorcliff-razorcliff-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-crafty-painting.jpg
-- name: wind-mills-windmills-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dark-dali.jpg
-- name: machine-road-machine-road-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-copper-circuit.jpg
-- name: abandonedbuildings_pablo_blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_pablo_blue.jpg
-- name: gypsy-wagon-gypsywagon-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-purple-pond.jpg
-- name: oldhouse-oldhouse-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-deep-connections.jpg
-- name: old-school-house-old-schoolhouse-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-monet-one.jpg
+- name: eduardo-eduardo-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-colorful-blocks.jpg
+- name: docks-docks-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-hot-spicy.jpg
+- name: blossombar-purple-storm-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-storm-file-00-00-00-00.jpg
+- name: bluelake-purple-pond-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-purple-pond-file-00-00-38-67.jpg
+- name: catacombs-catacombs-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-blue-granite.jpg
+- name: window-window-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-alberto-giacometti.jpg
+- name: dc-statue-dcstatue-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-emily-carr.jpg
+- name: blossombar-purple-pond-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-pond-file-00-00-24-99.jpg
+- name: oldhotel-oldhotel-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-blue-brush.jpg
+- name: old-school-house-old-schoolhouse-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-sunday.jpg
+- name: beach-rocks-beach-rocks-currents-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-green-zuma.jpg
+- name: death-valley-death-valley-national-park-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-creativity.jpg
+- name: school-clouds-church-clouds-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-kand-two.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-dali-three.jpg
+- name: power-lines-power-lines-empty-space-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-colorful-dream.jpg
+- name: locked-up-steam-lock-up-steam-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-far-away.jpg
+- name: gypsymosaic-gypsy-eyes-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-kandinsky-bv.jpg
+- name: blossombar-alien-goggles-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-alien-goggles-file-00-00-50-62.jpg
+- name: old-granary-field-granaryfield-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-marcel-duchamp.jpg
+- name: old-door-lock-old-door-lock-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-kandinsky-bv.jpg
+- name: capital-battle-capitolbattle-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-sand-paper.jpg
+- name: berlinwall-DSC-0084-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-spagetti-accident.jpg
+- name: sand-hand-sand-hand-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-post-modern.jpg
+- name: lincoln-memorial-lincolnmemorial-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-dali-two.jpg
+- name: server-cloud-server-racks-clouds-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-spagetti-accident.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-bright-sand.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-bright-sand.JPG
+- name: birdhouse-birdhouse-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-deep-connections.jpg
+- name: nazi-invasion-downtown-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-downtown-building.jpg
+- name: berlinwall2-berlinwall-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-dark-soul.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-graham-sutherland.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-graham-sutherland.JPG
+- name: statue-face-open-mouth-statue-face-open-mouth-colorful-blocks.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-colorful-blocks.png
+- name: downtown-fredericksburg-downtown-fredericksburg-internet-numbers.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-internet-numbers.JPG
+- name: crow_neo_instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_neo_instinct.jpg
+- name: windowmountain-window-mountain-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-blue-granite.jpg
+- name: locked-up-steam-lock-up-steam-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dali-three.jpg
+- name: fence-mexico-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-graham-sutherland.jpg
+- name: udnie-IMG_3469.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_3469.jpg
+- name: lincoln-memorial-lincolnmemorial-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-umberto-bocc.jpg
+- name: sand-hand-sand-hand-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-crunch-paper.jpg
+- name: bluelake-creativity-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-creativity-file-00-00-38-67.jpg
+- name: yuma-bank-yuma-bak-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-circuit-5.jpg
+- name: oldhotel-oldhotel-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-constitution.jpg
+- name: machine-road-machine-road-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-post-modern.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-spagetti-accident.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-aqua.jpg
+- name: amusement-park-amusement-park-2-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-satan-red.jpg
+- name: carry-load-carryload-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-neo-instinct.jpg
+- name: crow-crow-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-wols.jpg
+- name: abandonedbuildings_kand_two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_kand_two.jpg
+- name: san-francisco-street-view-san-francisco-street-view-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-colored-circuits.jpg
+- name: apartment-window-apartment-window-leaves.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/apartment-window-apartment-window-leaves.jpg
 ---
 Boise Rock School's Next Opus.&nbsp;China Says Trump, Xi Reach Trade Truce.&nbsp;Martinsburg Man Charged In Capital Heights Stabbing.&nbsp;Summer Travel Begins In Books.&nbsp;Indians Lose To Dogs.&nbsp;Colorado Man Shares Advice For Hiking With Dogs After 14er Journey With Golden Retriever.&nbsp;Career Classes Taking Off At Cottage Grove High School.&nbsp;Elmer City Fire Burns Nearly 2,000 Acres North Of Town.&nbsp;
